[package]
name = "pulse"
version = "0.1.0"
description = "Pulse system monitor"
authors = ["golbinski"]
edition = "2021"

[lib]
name = "pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"] }
